--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -1,96 +1,69 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+background-color: #1C1D21;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='100%25' height='100%25'%3E%3Cdefs%3E%3Cpattern id='p' width='100' height='100' patternUnits='userSpaceOnUse' patternTransform='scale(0.25)'%3E%3Ccircle id='a' data-color='outline' fill='none' stroke='%23BB9BB0' stroke-width='5' cx='0' cy='0' r='60'%3E%3C/circle%3E%3Cuse xlink:href='%23a' x='100'%3E%3C/use%3E%3Cuse xlink:href='%23a' x='100' y='100'%3E%3C/use%3E%3Cuse xlink:href='%23a' y='100'%3E%3C/use%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23p)' width='100%25' height='100%25'%3E%3C/rect%3E%3C/svg%3E");
+background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
+}
+:root{
+  --dark-violete: #2a2346;
+  --off-orange: #f7765f;
+  --off-white: #d6d2b3;
+  --primary: var(--dark-violete);
+}
+.light{
+  --primary: var(--dark-violete);
+  --secondary: var(--off-orange);
+  --third: var(--off-white);
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
+.dark{
+  --primary: var(--dark-violete);
+  --secondary: var(--off-white);
+  --third: var(--off-orange);
 }
 
 .card {
-  padding: 2em;
+  width:50%;
+  background-color: var(--third);
+  height: 12%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-basis: 22%;
+  margin-bottom: 5px;
+  justify-content: space-between;
+  border-radius: 75px;
+  overflow:hidden;
 }
-
-.read-the-docs {
-  color: #888;
+.flex-wrapper{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  width: 100vw;
+  margin: 1rem, auto;
+  background-color: var(--primary);
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+.card-img{
+ width: auto;
+ height: 10rem;
 }
-button:hover {
-  border-color: #646cff;
+.card:hover {
+  filter: drop-shadow(8px 8px 8px black);
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.desc{
+  width: 25%;
 }
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.flex_wrapper{
+ background-color: var(--dark-violete);
+ border-radius: 75px;
+}
+h1{
+  text-align: center;
+color: var(--secondary);
+font-size: 7rem;
+}
+p{
+  font-size: 1.5rem;
 }
