--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -1,22 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&display=swap');
 body {
   background-color: #281b1a;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='100%25' height='100%25'%3E%3Cdefs%3E%3Cpattern id='p' width='100' height='100' patternUnits='userSpaceOnUse'%3E%3Cpath id='a' data-color='fill' fill='%23FEF7FB' d='M50 50H0V0h50v50zM35 35V15H15v20h20zM100 100H50V50h50v50zM85 85V65H65v20h20zM35 64.9571v20H15v-20zM85 14.9571v20H65v-20z'%3E%3C/path%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23p)' width='100%25' height='100%25'%3E%3C/rect%3E%3C/svg%3E");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  font-family: 'Cinzel Decorative', ser
 }
 .card {
   width: 20%;
   background-color: #d3c3a3;
-  height: 12%;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 5px;
+  margin-bottom: 2.5px;
   justify-content: space-between;
   border-radius: 75px;
   overflow: hidden;
-  padding: 5px;
+  padding: 2.5px;
 }
 #output {
   display: flex;
@@ -28,7 +30,7 @@ body {
   flex-direction: row;
 }
 .card-img {
-  width: 10rem;
+  width: 12rem;
   border-radius: 20px;
 }
 .card:hover {
@@ -44,7 +46,11 @@ h1 {
   text-align: center;
   color: var(--secondary);
   font-size: 7rem;
+
 }
+/* h2{
+  font-size: 2.6rem; 
+}*/
 p {
   font-size: 2.5rem;
 }
