--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -1,14 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&display=swap");
 body {
-/*   background-color: #281b1a;
+  /*   background-color: #281b1a;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='100%25' height='100%25'%3E%3Cdefs%3E%3Cpattern id='p' width='100' height='100' patternUnits='userSpaceOnUse'%3E%3Cpath id='a' data-color='fill' fill='%23FEF7FB' d='M50 50H0V0h50v50zM35 35V15H15v20h20zM100 100H50V50h50v50zM85 85V65H65v20h20zM35 64.9571v20H15v-20zM85 14.9571v20H65v-20z'%3E%3C/path%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23p)' width='100%25' height='100%25'%3E%3C/rect%3E%3C/svg%3E");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat; */
-  background-image: url('https://wallpapercave.com/wp/wp2770226.jpg');
-  font-family: 'Cinzel Decorative', ser;
-   background-repeat: no-repeat;
-  background-size: 100vw ; 
+  background-image: url("https://wallpapercave.com/wp/wp2770226.jpg");
+  font-family: "Cinzel Decorative", ser;
+  background-repeat: no-repeat;
+  background-size: 100vw;
   background-attachment: fixed;
 }
 .card {
@@ -50,11 +50,13 @@ h1 {
   text-align: center;
   color: var(--secondary);
   font-size: 7rem;
-
 }
 /* h2{
   font-size: 2.6rem; 
 }*/
 p {
   font-size: 2.5rem;
+}
+h1 {
+  color: rgb(153, 20, 20);
 }
