--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -70,8 +70,8 @@ h1 {
   background-color: #d3c3a3;
 }
 #monsterName {
-  font-size: larger;
+  font-size: medium;
 }
 #button {
-  font-size: larger;
+  font-size: medium;
 }
